--- a/notebooks/map.ipynb
+++ b/notebooks/map.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "confident-combination",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "955ff05cc3054f82b3d617cf6479288f",
+       "model_id": "9d01197d1c714fbf8d8b578f4c66b5c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -71,7 +71,7 @@
     "}\n",
     "\n",
     "velocities_url = (\n",
-    "    'http://glaciertools.net.s3.amazonaws.com/its-live-tool-maps/velOnlyItslive_3031_raster/{z}/{x}/{y}.png'\n",
+    "   'http://personal-temporary-share.s3-website-us-west-1.amazonaws.com/itslive_ant_epsg3031_tiles/{z}/{y}/{x}.png' \n",
     ")\n",
     "\n",
     "# https://github.com/jupyter-widgets/ipyleaflet/blob/d9d09a74915531fd1845fa95d89a9419c2febfd2/ipyleaflet/leaflet.py#L521\n",
@@ -79,9 +79,9 @@
     "    url=velocities_url,\n",
     "    opacity=0.8,\n",
     "    tile_size=512,\n",
-    "    tms=True,\n",
+    "    tms=False,\n",
     "    min_zoom=1,\n",
-    "    max_zoom=9,\n",
+    "    max_zoom=5,\n",
     "    attribution=' geospatial'\n",
     ")\n",
     "\n",
@@ -127,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
